# UnrealRemoteMCP

./: .gitattributes  .gitattributes.sample  .gitignore  .p4ignore  BackupCLAUDE.md  P4IGNORE  PromptCase.md  README.md  RemoteMCP.uplugin  requirements.txt  文件类型及大小统计.txt
Content/EditorUI/: MainPanel.uasset  MainPanel1.uasset
Content/Python/: .gitignore  CLAUDE.md  Python.code-workspace  README.md  _startup_profile.json  env.bat  init_mcp.py  mcp_llm_fulls.md  minify_unreal_stub.py  pyproject.toml  unreal_python_tools.py
Content/Python/.cursor/rules/: unrealmcp.mdc
Content/Python/docs/: domain_tools.md
Content/Python/examples/: verify_bt_tools.py
Content/Python/foundation/: global_context.py  log_handler.py  mcp_app.py  static_counter.py  utility.py
Content/Python/tools/: behaviortree_tools.py  common_tools.py  edgraph_api_reference.md  edgraph_tools.py  edit_tools.py  livecoding_tools.py  prompt.py  resource.py  slate_tools.py  tool_register.py
Skills/: behaviortree_create_end_to_end.md  behaviortree_move_and_fire_remote_mcp_service.md  edgraph_behaviortree_tools_register_and_verify.md
Source/RemoteMCP/: RemoteMCP.Build.cs
Source/RemoteMCP/Private/: MCPLibrary.cpp  MCPPythonBridge.cpp  MCPSetting.cpp  MCPSubsystem.cpp  MCPUtility.cpp  RemoteMCP.cpp  RemoteMCPCommands.cpp  RemoteMCPStyle.cpp
Source/RemoteMCP/Public/: MCPLibrary.h  MCPMisc.cpp  MCPMisc.h  MCPPythonBridge.h  MCPSetting.h  MCPSubsystem.h  MCPUtility.h  RemoteMCP.h  RemoteMCPCommands.h  RemoteMCPStyle.h
docs/: domain_tool_prompt_enhancement.md  domain_tool_usage.md
(+22 files in other folders)
