[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

# To use a custom PyPI mirror, uncomment and set the URL below:
# [[index]]
# url = "https://pypi.org/simple"
# default = true
#
# [[tool.uv.index]]
# url = "https://pypi.org/simple"
# default = true